--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,10 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
+        "ext-pdo": "*",
+        "cboden/ratchet": "^0.4",
+        "firebase/php-jwt": "^6.8",
+        "illuminate/database": "~5.1",
         "monolog/monolog": "^2.8",
         "php-di/php-di": "^6.4",
         "slim/psr7": "^1.5",
@@ -39,7 +43,8 @@
     },
     "config": {
         "allow-plugins": {
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "kylekatarnls/update-helper": true
         },
         "process-timeout": 0,
         "sort-packages": true
@@ -56,6 +61,7 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
+        "server": "php src/chat-server.php",
         "test": "phpunit"
     }
 }
